# xmrig-run-on-idle

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
