[package]
name = "xmrig-run-on-idle"
version = "1.0.0"
edition = "2024"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
jsonrpsee = { version = "0.26", features = ["http-client", "macros"] }
log = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
