[package]
name = "xmrig-run-on-idle"
version = "0.1.0"
edition = "2021"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonrpsee = { version = "0.20", features = ["server", "macros", "client"] }
serde = "1"
tokio = { version = "1", features = ["rt", "time"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
user-idle = "0.5"
